Updated changes to include database changes for User Bundle.
Removed Security Controller to stop over laying FOS Security Controller.
Updated MenuBuilder to determine user logged in status.
Updated config to include jms and DI security changes.
Updated routing to include console as base URL in routes.
Updated security to use database access.
Included csrf field on login form.

--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -8,10 +8,11 @@
     <h1>Login</h1>
     <p>Please sign in with your <em>username</em> and <em>password</em>.</p>
     {% if error %}
-        <div class="alert alert-error">{{ error.message }}</div>
+        <div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
     {% endif %}
 
     <form action="{{ path("fos_user_security_check") }}" class="form-stacked well" method="post" id="login">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
         <div>
             <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
             <input type="text" id="username" name="_username" value="{{ last_username }}" />
